# miroom-job-modeller

./: .gitignore  package-lock.json  package.json  turbo.json
apps/api/: Dockerfile  main.py  pyproject.toml
apps/api/app/: schemas.py
apps/api/app/core/: config.py  llm_factory.py
apps/api/app/research_engine/: base_analyst.py  standard_analyst.py
apps/api/app/services/: org_service.py  prep_engine.py
apps/api/app/utils/: normalization.py
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: global-nav.tsx  live-feed.tsx  org-card.tsx  pillar-grid.tsx  pricing-section.tsx  research-progress.tsx  simulated-log.tsx  structured-view.tsx  teaser-card.tsx  theme-provider.tsx  thinking-log.tsx  upgrade-modal.tsx  user-nav.tsx  vital-signs.tsx
apps/web/hooks/: use-org-realtime.ts
apps/web/lib/: api.ts
humanDocs/: 260101-01.md
humanDocs/Req-01-01-V1/: Architecture_Proposal.md  Assessment.md  FunctionalSpec_MVP0.md  FunctionalSpec_MVP1.md  SetupTasks.md  hu-Gemini Threads - 1- Forumations.md  hu-MVP 0 and 1 & Architecture.md  hu-ProductTargetMarketAssessment.md
humanDocs/Req-01-02-OrgDossier/: ArchitectureDiagrams_ResearchOS.md  ImplementationPlan_ResearchOS.md  hu-mvp1-orgspec-part1.md  hu-mvp1-orgspec-part2.md  hu-mvp1-orgspec-part3.md  hu-mvp1-orgspec-part4.md  hu-mvp1-orgspec-part5.md  hu-mvp1-orgspec-part6-a.md  hu-mvp1-orgspec-part6-thinkingloud.md  mvp1_technical_spec.md  prompt.txt
humanDocs/Req-01-02-PublicSite/: LandingPage_Proposal.md  hu-Mokcup.html  hu-PricingModel.md  hu-Public Site Specification.md
(+6 files in other folders)
