[tool.poetry]
name = "job-modeller-api"
version = "0.1.0"
description = "Backend for Job Modeller Context Engine"
authors = ["Admin <admin@jobmodeller.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
supabase = "^2.3.0"
langgraph = "^0.0.10"
firecrawl-py = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
