[tool.poetry]
name = "job-modeller-api"
version = "0.1.0"
description = "Backend for Job Modeller Context Engine"
authors = ["Admin <admin@jobmodeller.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
supabase = "^2.3.0"
langgraph = "^0.0.10"
firecrawl-py = "^1.0.0"
tavily-python = "^0.3.0"
pydantic-settings = "^2.0.0"
langchain-openai = "^0.0.2"
langchain-anthropic = "^0.1.0"
langchain-google-genai = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
